; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavdevice/extr_dshow.c_dshow_check_event_queue.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavdevice/extr_dshow.c_dshow_check_event_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@E_ABORT = common dso_local global i64 0, align 8
@EC_COMPLETE = common dso_local global i64 0, align 8
@EC_DEVICE_LOST = common dso_local global i64 0, align 8
@EC_ERRORABORT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @dshow_check_event_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dshow_check_event_queue(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %25, %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i64 @IMediaEvent_GetEvent(i32* %8, i64* %5, i32* %3, i32* %4, i32 0)
  %10 = load i64, i64* @E_ABORT, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %31

12:                                               ; preds = %7
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @EC_COMPLETE, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %24, label %16

16:                                               ; preds = %12
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* @EC_DEVICE_LOST, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %24, label %20

20:                                               ; preds = %16
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* @EC_ERRORABORT, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %20, %16, %12
  store i32 -1, i32* %6, align 4
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i32*, i32** %2, align 8
  %27 = load i64, i64* %5, align 8
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @IMediaEvent_FreeEventParams(i32* %26, i64 %27, i32 %28, i32 %29)
  br label %7

31:                                               ; preds = %7
  %32 = load i32, i32* %6, align 4
  ret i32 %32
}

declare dso_local i64 @IMediaEvent_GetEvent(i32*, i64*, i32*, i32*, i32) #1

declare dso_local i32 @IMediaEvent_FreeEventParams(i32*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
